bot roles revamp, added back general post