@@ -5,8 +5,7 @@ import com.unbidden.telegramcoursesbot.dto.internal.SessionParamsDto;
 import com.unbidden.telegramcoursesbot.localization.LocalizationLoader;
 import com.unbidden.telegramcoursesbot.localization.Localizations;
 import com.unbidden.telegramcoursesbot.model.AuthorityType;
-import com.unbidden.telegramcoursesbot.model.Bot;
-import com.unbidden.telegramcoursesbot.model.UserEntity;
+import com.unbidden.telegramcoursesbot.model.BotRole;
 import com.unbidden.telegramcoursesbot.security.Security;
 import com.unbidden.telegramcoursesbot.service.orchestration.UserOrchestrationService;
 import com.unbidden.telegramcoursesbot.service.session.ContentSessionService;
@@ -53,47 +52,44 @@ public class BanButtonHandler extends AbstractButtonHandler {
     
     @Override
     @Security(authorities = AuthorityType.BOT_USER_BANS)
-    public void handle(UserEntity user, Bot bot, Map<String, String> params) {
+    public void handle(BotRole botRole, Map<String, String> params) {
         final boolean isGiveBan = Boolean.valueOf(params.get(IS_GIVE_BAN_PARAM));
 
         if (Boolean.valueOf(params.get(IS_BY_ID_PARAM))) {
-            LOGGER.debug("User " + user.getId() + " wants to input user id.");
-            contentSessionService.createSession(user, bot, p -> {   
+            LOGGER.debug("User " + botRole.getUser().getId() + " wants to input user id.");
+            contentSessionService.createSession(botRole, p -> {   
                 final long userId;
                 
                 if (isGiveBan) {
-                    validatorUtil.checkExactExpectedMessages(p.user(), p.messages(), 2);
-                    userId = validatorUtil.parseId(p.user(), p.messages().getFirst());
+                    validatorUtil.checkExactExpectedMessages(p.botRole(), p.messages(), 2);
+                    userId = validatorUtil.parseId(p.botRole(), p.messages().getFirst());
 
-                    userService.banUserInBot(p.user(), p.bot(), userId, validatorUtil.parseIntInBounds(
-                            p.user(), p.messages().getLast(), 0, MAX_BAN_HOURS));
+                    userService.banUserInBot(p.botRole(), userId, validatorUtil.parseIntInBounds(
+                            p.botRole(), p.messages().getLast(), 0, MAX_BAN_HOURS));
                 } else {
-                    validatorUtil.checkExactExpectedMessages(p.user(), p.messages(), 1);
-                    userId = validatorUtil.parseId(p.user(), p.messages().getFirst());
+                    validatorUtil.checkExactExpectedMessages(p.botRole(), p.messages(), 1);
+                    userId = validatorUtil.parseId(p.botRole(), p.messages().getFirst());
 
-                    userService.liftBanInBot(p.user(), p.bot(), userId);
+                    userService.liftBanInBot(p.botRole(), userId);
                 }
             });
             
-            LOGGER.debug("Sending request message to user " + user.getId() + "...");
+            LOGGER.debug("Sending request message to user " + botRole.getUser().getId() + "...");
             if (isGiveBan) {
-                clientManager.getClient(bot).sendMessage(user, localizationLoader
-                        .localize(Localizations.Service.BAN_USER_ID_REQUEST, user));
+                clientManager.sendMessage(botRole, localizationLoader.localize(Localizations.Service.BAN_USER_ID_REQUEST, botRole));
             } else {
-                clientManager.getClient(bot).sendMessage(user, localizationLoader
-                        .localize(Localizations.Service.LIFT_BAN_USER_ID_REQUEST, user));
+                clientManager.sendMessage(botRole, localizationLoader.localize(Localizations.Service.LIFT_BAN_USER_ID_REQUEST, botRole));
             }
             LOGGER.debug("Message sent.");
         } else {
-            LOGGER.debug("User " + user.getId() + " wants to choose user.");
-            final var chooseUser = userOrChatRequestSessionService.createSession(user, bot, getBanFunction(!isGiveBan));
+            LOGGER.debug("User " + botRole.getUser().getId() + " wants to choose user.");
+            final var chooseUser = userOrChatRequestSessionService.createSession(botRole, getBanFunction(!isGiveBan));
             final KeyboardButtonRequestUser requestUser = KeyboardButtonRequestUser.builder()
                     .userIsBot(false)
                     .requestId(String.valueOf(chooseUser.getRequestId())).build();
             final KeyboardButton button = KeyboardButton.builder()
                     .requestUser(requestUser)
-                    .text(localizationLoader.localize(Localizations.Button.BAN_CHOOSE_USER,
-                        user).getData())
+                    .text(localizationLoader.localize(Localizations.Button.BAN_CHOOSE_USER, botRole).getData())
                     .build();
 
             final KeyboardRow row = new KeyboardRow();
@@ -104,11 +100,9 @@ public class BanButtonHandler extends AbstractButtonHandler {
                     .keyboardRow(row)
                     .build();
 
-            LOGGER.debug("Sending keyboard message to user " + user.getId()
+            LOGGER.debug("Sending keyboard message to user " + botRole.getUser().getId()
                     + " in order for them to choose the target.");
-            clientManager.getClient(bot).sendMessage(user, localizationLoader
-                    .localize(Localizations.Service.BAN_CHOOSE_USER_REQUEST, user),
-                    markup);
+            clientManager.sendMessage(botRole, localizationLoader.localize(Localizations.Service.BAN_CHOOSE_USER_REQUEST, botRole), markup);
             LOGGER.debug("Keyboard message sent.");
         }
     }
@@ -116,20 +110,19 @@ public class BanButtonHandler extends AbstractButtonHandler {
     private Consumer<SessionParamsDto> getBanFunction(boolean lift) {
         return p -> {
             if (lift) {
-                userService.liftBanInBot(p.user(), p.bot(), p.messages().get(0).getUserShared().getUserId());
+                userService.liftBanInBot(p.botRole(), p.messages().get(0).getUserShared().getUserId());
                 return;
             }
 
-            contentSessionService.createSession(p.user(), p.bot(), p2 -> {
-                validatorUtil.checkExactExpectedMessages(p2.user(), p2.messages(), 1);
-                userService.banUserInBot(p2.user(), p2.bot(), p.messages().get(0).getUserShared().getUserId(),
-                        validatorUtil.parseIntInBounds(p2.user(), p2.messages().getFirst(), 0, MAX_BAN_HOURS));
+            contentSessionService.createSession(p.botRole(), p2 -> {
+                validatorUtil.checkExactExpectedMessages(p2.botRole(), p2.messages(), 1);
+                userService.banUserInBot(p2.botRole(), p.messages().get(0).getUserShared().getUserId(),
+                        validatorUtil.parseIntInBounds(p2.botRole(), p2.messages().getFirst(), 0, MAX_BAN_HOURS));
             });
             
-            LOGGER.debug("Sending request for ban hours to user " + p.user().getId() + "...");
-            clientManager.getClient(p.bot()).sendMessage(p.user(), localizationLoader
-                    .localize(Localizations.Service.BAN_CHOOSE_USER_HOURS_REQUEST, p.user()),
-                    keyboardRemove);
+            LOGGER.debug("Sending request for ban hours to user " + p.botRole().getUser().getId() + "...");
+            clientManager.sendMessage(p.botRole(), localizationLoader.localize(Localizations.Service.BAN_CHOOSE_USER_HOURS_REQUEST,
+                    p.botRole()), keyboardRemove);
             LOGGER.debug("Message sent.");
         };
     }
